--- a/paper/main/library.bib
+++ b/paper/main/library.bib
@@ -11,10 +11,13 @@
 @string{CC={Clim. Change}}
 @string{CS={Curr Sci India}}
 @string{CCCR={Curr. Clim. Change Rep.}}
+@string{CJPS={Can. J. Plant Sci.}}
 @string{CD={Clim. Dyn.}}
 @string{EH={Environ. Hazards}}
+@string{ERL={Environ. Res. Lett.}}
 @string{EJSSM={E.-J. Severe Storms Meteorol.}}
 @string{GBC={Global Biogeochem. Cy.}}
+@string{GCB={Glob. Change Biol.}}
 @string{GMD={Geosci. Model Dev.}}
 @string{GRL={Geophys. Res. Lett.}}
 @string{IJC={Int. J. Climatol.}}
@@ -41,6 +44,7 @@
 @string{QJRMS={Q. J. Roy. Meteor. Soc.}}
 @string{REE={Resour. Energy Econ.}}
 @string{RG={Rev. Geophys.}}
+@string{SR={Sci. Rep.}}
 @string{WCS={Weather Clim. Soc.}}
 @string{WCE={Weather Clim. Extremes}}
 @string{WF={Weather Forecast.}}
@@ -55,52 +59,247 @@
   url         = {https://www.abs.gov.au/statistics/standards/australian-statistical-geography-standard-asgs-edition-3/jul2021-jun2026/significant-urban-areas-urban-centres-and-localities-section-state/significant-urban-areas}
 }
 
-@article{Eccel_IJC_2012,
-  author  = {Eccel, Emanuele and Cau, Piero and Riemann-Campe, Kathrin and
-             Biasioli, Franco},
-  title   = {Quantitative hail monitoring in an alpine area: 35-year
-             climatology and links with atmospheric variables},
-  journal = IJC,
-  volume  = 3,
-  number  = 4,
-  pages   = {503-517},
-  doi     = {10.1002/joc.2291},
-  year    = 2012
+@article{Zhang_SR_2017,
+  author  = {Zhang, Qinghong and Ni, Xiang and Zhang, Fuqing},
+  title   = {Decreasing trend in severe weather occurrence over {C}hina during the past 50 years},
+  journal = {Scientific Reports},
+  volume  = {7},
+  pages   = {42310},
+  issn    = {2045-2322},
+  doi     = {10.1038/srep42310},
+  year    = {2017}
 }
 
-@misc{SPC_SHIP,
-  title        = {Significant Hail Parameter},
-  author       = {{NOAA SPC}},
-  year         = {2022},
-  note         = {National Oceanographic and Atmospheric Administration National Weather Service Storm Prediction Center, accessed 21 June 2022},
-  howpublished = {\url{https://www.spc.noaa.gov/exper/mesoanalysis/help/help_sigh.html}}
+@article{Allen_JAMES_2015,
+   author = {Allen, John T. and Tippett, Michael K. and Sobel, Adam H.},
+   title = {An empirical model relating {US} monthly hail occurrence to large-scale meteorological environment},
+   journal = {Journal of Advances in Modeling Earth Systems},
+   volume = {7},
+   number = {1},
+   pages = {226-243},
+   DOI = {10.1002/2014MS000397},
+   year = {2015}
 }
 
-@article{Kunz_NHESS_2007,
-  author  = {Kunz, M.},
-  title   = {The skill of convective parameters and indices to predict
-             isolated and severe thunderstorms},
-  journal = NHESS,
-  volume  = 7,
-  number  = 2,
-  pages   = {327-342},
-  issn    = {1561-8633},
-  doi     = {10.5194/nhess-7-327-2007},
-  year    = 2007
+@article{Barrett_MWR_2015,
+   author = {Barrett, Bradford S. and Henley, Brittany N.},
+   title = {Intraseasonal Variability of Hail in the Contiguous {U}nited {S}tates: Relationship to the {M}adden–{J}ulian Oscillation},
+   journal = MWR,
+   volume = {143},
+   number = {4},
+   pages = {1086-1103},
+   DOI = {10.1175/MWR-D-14-00257.1},
+   year = {2015}
 }
 
-
-@article{Mohr_AR_2013,
-  author  = {Mohr, S. and Kunz, M.},
-  title   = {Recent trends and variabilities of convective parameters
-             relevant for hail events in {G}ermany and {E}urope},
+@article{Madonna_AR_2018,
+  author  = {Madonna, Erica and Ginsbourger, David and Martius, Olivia},
+  title   = {A Poisson regression approach to model monthly hail occurrence in {N}orthern {S}witzerland using large-scale environmental variables},
   journal = AR,
-  volume  = {123},
-  pages   = {211-228},
+  volume  = {203},
+  pages   = {261-274},
   issn    = {0169-8095},
-  doi     = {10.1016/j.atmosres.2012.05.016},
-  year    = 2013
+  doi     = {10.1016/j.atmosres.2017.11.024},
+  year    = {2018}
 }
+
+@article{Allen_EJSSM_2015,
+   author = {Allen, John T. and Tippett, Michael K.},
+   title = {The Characteristics of {U}nited {S}tates Hail Reports: 1955-2014},
+   journal = EJSSM,
+   volume = {10},
+   number = {3},
+   pages = {1-31},
+   year = {2015},
+}
+
+@article{Wilhelm_NHESS_2024,
+  author  = {Wilhelm, L. and Schwierz, C. and Schr\"oer, K. and Taszarek, M. and Martius, O.},
+  title   = {Reconstructing hail days in {S}witzerland with statistical models (1959--2022)},
+  journal = {Natural Hazards and Earth System Sciences},
+  volume  = {24},
+  year    = {2024},
+  number  = {11},
+  pages   = {3869--3894},
+  doi     = {10.5194/nhess-24-3869-2024}
+}
+
+@article{Kapsch_JGRA_2012,
+  author  = {Kapsch, M. L. and Kunz, M. and Vitolo, R. and Economou, T.},
+  title   = {Long-term trends of hail-related weather types in an ensemble of regional climate models using a {B}ayesian approach},
+  journal = JGRA,
+  volume  = {117},
+  number  = {D15},
+  pages   = {D15107},
+  doi     = {10.1029/2011JD017185},
+  year    = {2012}
+}
+
+@article{Dessens_AR_2015,
+  author  = {Dessens, J. and Berthet, C. and Sanchez, J. L.},
+  title   = {Change in hailstone size distributions with an increase in the melting level height},
+  journal = AR,
+  volume  = {158-159},
+  pages   = {245-253},
+  issn    = {0169-8095},
+  doi     = {10.1016/j.atmosres.2014.07.004},
+  year    = {2015}
+}
+
+@article{Sanderson_IJC_2015,
+  author  = {Sanderson, M. G. and Hand, W. H. and Groenemeijer, P. and Boorman, P. M. and Webb, J. D. C. and McColl, L. J.},
+  title   = {Projected changes in hailstorms during the 21st century over the {UK}},
+  journal = IJC,
+  volume  = {35},
+  number  = {1},
+  pages   = {15-24},
+  doi     = {10.1002/joc.3958},
+  year    = {2015}
+}
+
+@article{Allen_JC_2014,
+   author = {Allen, John T. and Karoly, David J. and Walsh, Kevin J.},
+   title = {Future Australian Severe Thunderstorm Environments. Part I: A Novel Evaluation and Climatology of Convective Parameters from Two Climate Models for the Late Twentieth Century},
+   journal = JC,
+   volume = {27},
+   number = {10},
+   pages = {3827-3847},
+   DOI = {10.1175/JCLI-D-13-00425.1},
+   year = {2014},
+   type = {Journal Article}
+}
+
+
+
+@article{Piani_NHESS_2005,
+  author  = {Piani, F. and Crisci, A. and De Chiara, G. and Maracchi, G. and Meneguzzo, F.},
+  title   = {Recent trends and climatic perspectives of hailstorms frequency and intensity in {T}uscany and {C}entral {I}taly},
+  journal = NHESS,
+  volume  = {5},
+  number  = {2},
+  pages   = {217-224},
+  doi     = {10.5194/nhess-5-217-2005},
+  year    = {2005}
+}
+
+@article{Mohr_JGRA_2015,
+  author  = {Mohr, S. and Kunz, M. and Keuler, K.},
+  title   = {Development and application of a logistic model to estimate the past and future hail potential in {G}ermany},
+  journal = JGRA,
+  volume  = {120},
+  number  = {9},
+  pages   = {3939-3956},
+  issn    = {2169-897X},
+  doi     = {10.1002/2014JD022959},
+  year    = {2015}
+}
+
+@phdthesis{Willemse_1995,
+  author     = {Willemse, Saskia},
+  title      = {A statistical analysis and climatological interpretation of hailstorms in {S}witzerland},
+  university = {ETH Zurich},
+  type       = {Doctoral Thesis},
+  url        = {https://www.research-collection.ethz.ch/handle/20.500.11850/142192},
+  year       = {1995},
+  type       = {Thesis}
+}
+
+@article{Kunz_IJC_2009,
+  author  = {Kunz, M. and Sander, J. and Kottmeier, Ch},
+  title   = {Recent trends of thunderstorm and hailstorm frequency and their relation to atmospheric characteristics in southwest {G}ermany},
+  journal = IJC,
+  volume  = {29},
+  number  = {15},
+  pages   = {2283-2297},
+  doi     = {10.1002/joc.1865},
+  year    = {2009}
+}
+
+@article{Etkin_IJC_1999,
+  author  = {Etkin, David and Brun, Soren Erik},
+  title   = {A note on {C}nada's hail climatology: 1977-1993},
+  journal = IJC,
+  volume  = {19},
+  number  = {12},
+  pages   = {1357-1373},
+  doi     = {10.1002/(SICI)1097-0088(199910)19:12<1357::AID-JOC422>3.0.CO;2-B},
+  year    = {1999}
+}
+
+@article{Radler_JAMC_2018,
+  author  = {R\"adler, Anja T. and Groenemeijer, Pieter and Faust, Eberhard and Sausen, Robert},
+  title   = {Detecting Severe Weather Trends Using an Additive Regressive Convective Hazard Model ({AR-CHaMo})},
+  journal = JAMC,
+  volume  = {57},
+  number  = {3},
+  pages   = {569-587},
+  issn    = {1558-8424},
+  doi     = {10.1175/JAMC-D-17-0132.1},
+  year    = {2018}
+}
+
+
+
+@article{Changnon_JC_2000,
+  author  = {Changnon, Stanley A. and Changnon, David},
+  title   = {Long-Term Fluctuations in Hail Incidences in the {U}nited {S}tates},
+  journal = JC,
+  volume  = {13},
+  number  = {3},
+  pages   = {658-664},
+  doi     = {10.1175/1520-0442(2000)013<0658:LTFIHI>2.0.CO;2},
+  year    = {2000}
+}
+
+@article{Jin_AR_2017,
+  author  = {Jin, Han-Gyul and Lee, Hyunho and Lkhamjav, Jambajamts and Baik, Jong-Jin},
+  title   = {A hail climatology in {S}outh {K}orea},
+  journal = AR,
+  volume  = {188},
+  pages   = {90-99},
+  issn    = {0169-8095},
+  doi     = {10.1016/j.atmosres.2016.12.013},
+  year    = {2017}
+}
+
+@article{Lkhamjav_APJAS_2017,
+  author  = {Lkhamjav, Jambajamts and Jin, Han-Gyul and Lee, Hyunho and Baik, Jong-Jin},
+  title   = {A hail climatology in Mongolia},
+  journal = {Asia-Pacific Journal of {A}tmospheric {S}ciences},
+  volume  = {53},
+  number  = {4},
+  pages   = {501-509},
+  issn    = {1976-7951},
+  doi     = {10.1007/s13143-017-0052-1},
+  year    = {2017}
+}
+
+@article{Li_JC_2016,
+  author  = {Li, Mingxin and Zhang, Qinghong and Zhang, Fuqing},
+  title   = {Hail Day Frequency Trends and Associated Atmospheric Circulation Patterns over {C}hina during 1960-2012},
+  journal = JC,
+  volume  = {29},
+  number  = {19},
+  pages   = {7027-7044},
+  doi     = {10.1175/JCLI-D-15-0500.1},
+  year    = {2016}
+}
+
+
+
+@inbook{Allen_2018,
+  author    = {Allen, John T.},
+  title     = {Climate Change and Severe Thunderstorms},
+  booktitle = {Oxford Research Encyclopedia of Climate Science},
+  publisher = {Oxford Univ. Press},
+  pages     = {67},
+  doi       = {10.1093/acrefore/9780190228620.013.62},
+  url       = {https://oxfordre.com/climatescience/view/10.1093/acrefore/9780190228620.001.0001/acrefore-9780190228620-e-62},
+  year      = {2018},
+  type      = {Book Section}
+}
+
+
 
 @article{Allen_AMOJ_2011,
   title     = {A severe thunderstorm climatology for {A}ustralia and
@@ -146,6 +345,7 @@
   doi     = {10.1175/JCLI-D-13-00425.1},
   year    = 2014
 }
+
 
 @article{Allen_JC_2014b,
   author  = {Allen, John T. and Karoly, David J. and Walsh, Kevin J.},
@@ -230,6 +430,65 @@
   year    = {2020}
 }
 
+@article{Childs_WCS_2020,
+   author = {Childs, Samuel J. and Schumacher, Russ S. and Strader, Stephen M.},
+   title = {Projecting End-of-Century Human Exposure from Tornadoes and Severe Hailstorms in {E}astern {C}olorado: Meteorological and Population Perspectives},
+   journal = WCS,
+   volume = {12},
+   number = {3},
+   pages = {575–595},
+   ISSN = {1948-8327},
+   DOI = {10.1175/wcas-d-19-0153.1},
+   year = {2020}
+}
+
+@article{Trapp_JC_2019,
+   author = {Trapp, Robert J. and Hoogewind, Kimberly A. and Lasher-Trapp, Sonia},
+   title = {Future changes in hail occurrence in the {U}nited {S}tates determined through convection-permitting dynamical downscaling},
+   journal = {Journal of Climate},
+   volume = {32},
+   number = {17},
+   pages = {5493–5509},
+   DOI = {10.1175/JCLI-D-18-0740.1},
+   year = {2019}
+}
+
+@article{Mahoney_NCC_2012,
+   author = {Mahoney, Kelly and Alexander, Michael A. and Thompson, Gregory and Barsugli, Joseph J. and Scott, James D.},
+   title = {Changes in hail and flood risk in high-resolution simulations over {C}olorado's mountains},
+   journal = NCC,
+   volume = {2},
+   number = {2},
+   pages = {125-131},
+   DOI = {10.1038/nclimate1344},
+   year = {2012}
+}
+
+
+
+@article{Brimelow_NCC_2017,
+   author = {Brimelow, Julian C. and Burrows, William R. and Hanesiak, John M.},
+   title = {The changing hail threat over {N}orth {A}merica in response to anthropogenic climate change},
+   journal = NCC,
+   volume = {7},
+   number = {7},
+   pages = {516-523},
+   DOI = {10.1038/nclimate3321},
+   year = {2017}
+}
+
+@inbook{Brimelow_2018,
+  author    = {Brimelow, Julian},
+  title     = {Hail and Hailstorms},
+  booktitle = {Oxford Research Encyclopedia of Climate Science},
+  publisher = {Oxford Univ. Press},
+  doi       = {10.1093/acrefore/9780190228620.013.666},
+  url       = {https://oxfordre.com/climatescience/view/10.1093/acrefore/9780190228620.001.0001/acrefore-9780190228620-e-666},
+  year      = {2018},
+  type      = {Book Section},
+  pages     = 58
+}
+
 @article{Brooks_AR_2003,
   author  = {Harold E Brooks and James W Lee and Jeffrey P Craven},
   title   = {The spatial distribution of severe thunderstorm and tornado
@@ -266,6 +525,7 @@
   year    = {2021}
 }
 
+
 @article{Cecil_JC_2012,
   author  = {Cecil, Daniel J. and Blankenship, Clay B.},
   title   = {Toward a Global Climatology of Severe Hailstorms as Estimated by Satellite Passive Microwave Imagers},
@@ -275,6 +535,16 @@
   pages   = {687-703},
   doi     = {10.1175/JCLI-D-11-00130.1},
   year    = {2012}
+}
+
+@article{Chattopadhyay_Mausam_2017,
+  title   = {Occurrence of hail storms and strategies to minimize its effect on crops},
+  author  = {Chattopadhyay, N and Devi, S Sunitha and John, Gracy and Choudhari, VR},
+  journal = {Mausam},
+  volume  = {68},
+  number  = {1},
+  pages   = {75--92},
+  year    = {2017}
 }
 
 @article{Chen_JC_2020,
@@ -310,6 +580,17 @@
   pages   = {641-663},
   doi     = {10.1175/JAS-D-16-0066.1},
   year    = {2017}
+}
+
+@article{Dhillon_CJPS_2021,
+  author  = {Dhillon, Gurbir Singh and Gretzinger, Mike and Baarda, Lewis and Lange, Ralph and Singh Gill, Kabal and Yaremko, Vance and Harding, Michael W. and Coles, Ken},
+  title   = {Effects of simulated hail damage and foliar-applied recovery treatments on growth and grain yield of wheat, field pea, and dry bean crops},
+  journal = CJPS,
+  volume  = {101},
+  number  = {5},
+  pages   = {758-769},
+  year    = {2021},
+  doi     = {10.1139/cjps-2020-0231}
 }
 
 @article{Diffenbaugh_PNAS_2013,
@@ -384,6 +665,19 @@
   doi       = {10.1002/met.25}
 }
 
+@article{Eccel_IJC_2012,
+  author  = {Eccel, Emanuele and Cau, Piero and Riemann-Campe, Kathrin and
+             Biasioli, Franco},
+  title   = {Quantitative hail monitoring in an alpine area: 35-year
+             climatology and links with atmospheric variables},
+  journal = IJC,
+  volume  = 3,
+  number  = 4,
+  pages   = {503-517},
+  doi     = {10.1002/joc.2291},
+  year    = 2012
+}
+
 @misc{ERA5_data,
   author = {Hersbach, H. and Bell, B. and Berrisford, P. and Biavati, G. and
             Hor\'{a}nyi, A. and Mu\~{n}oz Sabater, J. and Nicolas, J. and
@@ -430,6 +724,17 @@
   year    = {2003}
 }
 
+@article{Franke_GCB_2022,
+  author  = {Franke, James A. and Müller, Christoph and Minoli, Sara and Elliott, Joshua and Folberth, Christian and Gardner, Charles and Hank, Tobias and Izaurralde, Roberto Cesar and Jägermeyr, Jonas and Jones, Curtis D. and Liu, Wenfeng and Olin, Stefan and Pugh, Thomas A.M. and Ruane, Alex C. and Stephens, Haynes and Zabel, Florian and Moyer, Elisabeth J.},
+  title   = {Agricultural breadbaskets shift poleward given adaptive farmer behavior under climate change},
+  journal = GCB,
+  volume  = {28},
+  number  = {1},
+  pages   = {167-181},
+  doi     = {10.1111/gcb.15868},
+  year    = {2022}
+}
+
 @article{Galway_BAMS_1956,
   author    = {Joseph G. Galway},
   title     = {The Lifted Index as a Predictor of Latent Instability},
@@ -441,6 +746,18 @@
   number    = 10,
   doi       = {10.1175/1520-0477-37.10.528},
   pages     = {528-529}
+}
+
+@article{Gensini_npjCAS_2024,
+  author  = {Gensini, Vittorio A. and Ashley, Walker S. and Michaelis, Allison C. and Haberlie, Alex M. and Goodin, Jillian and Wallace, Brendan C.},
+  title   = {Hailstone size dichotomy in a warming climate},
+  journal = npjCAS,
+  volume  = {7},
+  number  = {1},
+  pages   = {185},
+  issn    = {2397-3722},
+  doi     = {10.1038/s41612-024-00728-9},
+  year    = {2024}
 }
 
 @article{Hersbach_QJRMS_2020,
@@ -515,6 +832,34 @@
   year    = {2008}
 }
 
+@article{Kunz_NHESS_2007,
+  author  = {Kunz, M.},
+  title   = {The skill of convective parameters and indices to predict
+             isolated and severe thunderstorms},
+  journal = NHESS,
+  volume  = 7,
+  number  = 2,
+  pages   = {327-342},
+  issn    = {1561-8633},
+  doi     = {10.5194/nhess-7-327-2007},
+  year    = 2007
+}
+
+@incollection{IPCC_2021_WGI_Ch_11,
+    address = {Cambridge, UK and New York, NY, USA},
+    author = {Seneviratne, S.I. and Zhang, X. and Adnan, M. and Badi, W. and Dereczynski, C. and Di Luca, A. and Ghosh, S. and Iskandar, I. and Kossin, J. and Lewis, S. and Otto, F. and Pinto, I. and Satoh, M. and Vicente-Serrano, S.M. and Wehner, M. and Zhou, B.},
+    booktitle = {Climate Change 2021: The Physical Science Basis. Contribution of Working Group I to the Sixth Assessment Report of the Intergovernmental Panel on Climate Change},
+    chapter = {11},
+    doi = {10.1017/9781009157896.013},
+    editor = {Masson-Delmotte, V. and Zhai, P. and Pirani, A. and Connors, S. L. and Péan, C. and Berger, S. and Caud, N. and Chen, Y. and Goldfarb, L. and Gomis, M. I. and Huang, M. and Leitzell, K. and Lonnoy, E. and Matthews, J. B. R. and Maycock, T. K. and Waterfield, T. and Yelekçi, O. and Yu, R. and Zhou, B.},
+    pages = {1513-1765},
+    publisher = {Cambridge University Press},
+    title = {Weather and Climate Extreme Events in a Changing Climate},
+    type = {Book Section},
+    url = {https://www.ipcc.ch/report/ar6/wg1/downloads/report/IPCC_AR6_WGI_Chapter11.pdf},
+    year = {2021}
+}
+
 @incollection{Lawrence_IPCC_2022,
   author    = {Lawrence, J. and Mackey, B. and Chiew, F. and Costello, M.J. and Hennessy, K. and Lansbury, N., and Nidumolu, U.B. and Pecl, G. and Rickards, L. and Tapper, N. and Woodward, A. and Wreford, A.},
   title     = {Australasia},
@@ -552,15 +897,40 @@
   pages     = {179-204}
 }
 
-@article{Mahoney_NCC_2012,
-  author  = {Mahoney, Kelly and Alexander, Michael A. and Thompson, Gregory and Barsugli, Joseph J. and Scott, James D.},
-  title   = {Changes in hail and flood risk in high-resolution simulations over {C}olorado's mountains},
-  journal = NCC,
-  volume  = {2},
-  number  = {2},
-  pages   = {125-131},
-  doi     = {10.1038/nclimate1344},
-  year    = {2012}
+@article{Liu_ERL_2024,
+  doi       = {10.1088/1748-9326/ad1d39},
+  year      = {2024},
+  month     = {Jan},
+  publisher = {IOP Publishing},
+  volume    = {19},
+  number    = {2},
+  pages     = {024010},
+  author    = {Liu, Jimin and Leung, Jeremy Cheuk-Hin and Huang, Hong and Xu, Daosheng and Li, Weijing and Qian, Weihong and Zhang, Banglin},
+  title     = {Observed northward shift of large hailstorms in the eastern {U}nited {S}tates since 2000},
+  journal   = ERL
+}
+
+@article{Beal_AR_2020,
+   author = {Beal, Alexandra and Hallak, Ricardo and Martins, Leila D. and Martins, Jorge A. and Biz, Guilherme and Rudke, Anderson P. and Tarley, Cesar R. T.},
+   title = {Climatology of hail in the triple border {P}aran\'a, {S}anta {C}atarina ({B}razil) and {A}rgentina},
+   journal = AR,
+   volume = {234},
+   pages = {104747},
+   ISSN = {0169-8095},
+   DOI = {10.1016/j.atmosres.2019.104747},
+   url = {http://www.sciencedirect.com/science/article/pii/S0169809519308932},
+   year = {2020}
+}
+
+@article{Mezher_AR_2012,
+   author = {Mezher, Romina N. and Doyle, Moira and Barros, Vicente},
+   title = {Climatology of hail in {A}rgentina},
+   journal = {Atmospheric Research},
+   volume = {114-115},
+   pages = {70-82},
+   ISSN = {0169-8095},
+   DOI = {10.1016/j.atmosres.2012.05.020},
+   year = {2012}
 }
 
 @article{McMaster_CC_1999,
@@ -575,6 +945,19 @@
   doi     = {10.1023/A:1005475717321},
   year    = 1999
 }
+
+@article{Mohr_AR_2013,
+  author  = {Mohr, S. and Kunz, M.},
+  title   = {Recent trends and variabilities of convective parameters
+             relevant for hail events in {G}ermany and {E}urope},
+  journal = AR,
+  volume  = {123},
+  pages   = {211-228},
+  issn    = {0169-8095},
+  doi     = {10.1016/j.atmosres.2012.05.016},
+  year    = 2013
+}
+
 @article{Niall_IJC_2005,
   author  = {Niall, Stephanie and Walsh, Kevin},
   title   = {The impact of climate change on hailstorms in
@@ -595,6 +978,17 @@
   number  = {1},
   doi     = {10.1029/2008GB003435},
   year    = {2010}
+}
+
+@book{Pruppacher_2010,
+   author = {Pruppacher, H. R. and Klett, J. D.},
+   title = {Microphysics of clouds and precipitation},
+   publisher = {Springer},
+   volume = {18},
+   edition = {2nd},
+   series = {Atmospheric and Oceanographic Science Library},
+   year = {2010},
+   type = {Book}
 }
 
 @dataset{Portmann_MIRCA_2022,
@@ -672,6 +1066,18 @@
   pages     = {545-567}
 }
 
+@article{Raupach_npjCAS_2023,
+  author  = {Raupach, Timothy H. and Soderholm, Joshua S. and Warren, Robert A. and Sherwood, Steven C.},
+  title   = {Changes in hail hazard across Australia: 1979-2021},
+  journal = npjCAS,
+  volume  = {6},
+  number  = {1},
+  pages   = {143},
+  issn    = {2397-3722},
+  doi     = {10.1038/s41612-023-00454-8},
+  year    = {2023}
+}
+
 @article{Raupach_NREE_2021,
   author  = {Raupach, Timothy H. and Martius, Olivia and Allen, John T.
              and Kunz, Michael and Lasher-Trapp, Sonia and Mohr,
@@ -728,6 +1134,17 @@
   issn    = {0169-8095},
   doi     = {10.1016/j.atmosres.2005.12.003},
   author  = {Sandra S. Schuster and Russell J. Blong and K. John McAneney}
+}
+
+@misc{Schwertfeger_2024,
+  author    = {Benjamin T. Schwertfeger},
+  title     = {btschwertfeger/python-cmethods: v2.3.0},
+  month     = Jun,
+  year      = 2024,
+  publisher = {Zenodo},
+  version   = {v2.3.0},
+  doi       = {10.5281/zenodo.12168002},
+  url       = {https://doi.org/10.5281/zenodo.12168002}
 }
 
 @article{Seeley_GRL_2015,
@@ -818,6 +1235,14 @@
   note   = {Accessed 2024-01-10}
 }
 
+@misc{SPC_SHIP,
+  title        = {Significant Hail Parameter},
+  author       = {{NOAA SPC}},
+  year         = {2022},
+  note         = {National Oceanographic and Atmospheric Administration National Weather Service Storm Prediction Center, accessed 21 June 2022},
+  howpublished = {\url{https://www.spc.noaa.gov/exper/mesoanalysis/help/help_sigh.html}}
+}
+
 @article{Tang_npjCAS_2019,
   author  = {Tang, Brian H. and Gensini, Vittorio A. and Homeyer, Cameron R.},
   title   = {Trends in {U}nited {S}tates large hail environments and observations},
@@ -891,6 +1316,17 @@
   year    = {2015}
 }
 
+@article{Trapp_GRL_2009,
+  author  = {Trapp, Robert J. and Diffenbaugh, Noah S. and Gluhovsky, Alexander},
+  title   = {Transient response of severe thunderstorm forcing to elevated greenhouse gas concentrations},
+  journal = GRL,
+  volume  = {36},
+  number  = {1},
+  pages   = {L01703},
+  doi     = {10.1029/2008GL036203},
+  year    = {2009}
+}
+
 @article{Warren_QJRMS_2020,
   author  = {Warren, Robert A. and Ramsay, Hamish A. and Siems, Steven T. and Manton, Michael J. and Peter, Justin R. and Protat, Alain and Pillalamarri, Anu},
   title   = {Radar-based climatology of damaging hailstorms in {B}risbane and {S}ydney, {A}ustralia},
@@ -936,84 +1372,4 @@
   pages   = {e2021GL095485},
   doi     = {10.1029/2021GL095485},
   year    = {2021}
-}
-
-@article{Chattopadhyay_Mausam_2017,
-  title={Occurrence of hail storms and strategies to minimize its effect on crops},
-  author={Chattopadhyay, N and Devi, S Sunitha and John, Gracy and Choudhari, VR},
-  journal={Mausam},
-  volume={68},
-  number={1},
-  pages={75--92},
-  year={2017}
-}
-
-@article{Raupach_npjCAS_2023,
-   author = {Raupach, Timothy H. and Soderholm, Joshua S. and Warren, Robert A. and Sherwood, Steven C.},
-   title = {Changes in hail hazard across Australia: 1979-2021},
-   journal = npjCAS,
-   volume = {6},
-   number = {1},
-   pages = {143},
-   ISSN = {2397-3722},
-   DOI = {10.1038/s41612-023-00454-8},
-   year = {2023}
-}
-
-@misc{Schwertfeger_2024,
-  author       = {Benjamin T. Schwertfeger},
-  title        = {btschwertfeger/python-cmethods: v2.3.0},
-  month        = Jun,
-  year         = 2024,
-  publisher    = {Zenodo},
-  version      = {v2.3.0},
-  doi          = {10.5281/zenodo.12168002},
-  url          = {https://doi.org/10.5281/zenodo.12168002}
-}
-
-@inbook{Allen_2018,
-   author = {Allen, John T.},
-   title = {Climate Change and Severe Thunderstorms},
-   booktitle = {Oxford Research Encyclopedia of Climate Science},
-   publisher = {Oxford Univ. Press},
-   pages = {67},
-   DOI = {10.1093/acrefore/9780190228620.013.62},
-   url = {https://oxfordre.com/climatescience/view/10.1093/acrefore/9780190228620.001.0001/acrefore-9780190228620-e-62},
-   year = {2018},
-   type = {Book Section}
-}
-
-@inbook{Brimelow_2018,
-   author = {Brimelow, Julian},
-   title = {Hail and Hailstorms},
-   booktitle = {Oxford Research Encyclopedia of Climate Science},
-   publisher = {Oxford Univ. Press},
-   DOI = {10.1093/acrefore/9780190228620.013.666},
-   url = {https://oxfordre.com/climatescience/view/10.1093/acrefore/9780190228620.001.0001/acrefore-9780190228620-e-666},
-   year = {2018},
-   type = {Book Section},
-   pages = 58
-}
-
-@article{Trapp_GRL_2009,
-   author = {Trapp, Robert J. and Diffenbaugh, Noah S. and Gluhovsky, Alexander},
-   title = {Transient response of severe thunderstorm forcing to elevated greenhouse gas concentrations},
-   journal = GRL,
-   volume = {36},
-   number = {1},
-   pages = {L01703},
-   DOI = {10.1029/2008GL036203},
-   year = {2009}
-}
-
-@article{Gensini_npjCAS_2024,
-   author = {Gensini, Vittorio A. and Ashley, Walker S. and Michaelis, Allison C. and Haberlie, Alex M. and Goodin, Jillian and Wallace, Brendan C.},
-   title = {Hailstone size dichotomy in a warming climate},
-   journal = npjCAS,
-   volume = {7},
-   number = {1},
-   pages = {185},
-   ISSN = {2397-3722},
-   DOI = {10.1038/s41612-024-00728-9},
-   year = {2024}
 }
